--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
-    "@nuxt/http": "^0.3.0",
+    "@nuxt/http": "0.4.0",
     "nuxt": "^2.12.2",
     "reqlim": "^0.0.0",
     "vue-client-only": "2.0.0",
